<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/prediction_intro_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_margin="32dp"
      android:text="@string/predict_button_introduction_message"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      />

  <Button
      android:id="@+id/button_predict"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/predict"
      />

  <LinearLayout
      android:id="@+id/prediction_time_picker_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="32dp"
      android:orientation="vertical"
      android:visibility="gone"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/time_for_prediction"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />
    <TimePicker
        android:id="@+id/prediction_timepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:timePickerMode="spinner"
        />

    <Button
        android:id="@+id/submit_time_for_prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        />
  </LinearLayout>


  <LinearLayout
      android:id="@+id/prediction_calendar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="32dp"
      android:orientation="vertical"
      android:visibility="gone"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/date_for_prediction"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <CalendarView
        android:id="@+id/prediction_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        />

    <Button
        android:id="@+id/submit_date_for_prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        />

  </LinearLayout>
</LinearLayout>